RESOLVED FIXED163307
REGRESSION (r207162): [debug] loader/stateobjects LayoutTests timing out
https://bugs.webkit.org/show_bug.cgi?id=163307
Summary REGRESSION (r207162): [debug] loader/stateobjects LayoutTests timing out
Ryan Haddad
Reported 2016-10-11 16:54:55 PDT
REGRESSION: [debug] loader/stateobjects LayoutTests timing out https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK2%20(Tests)/r207164%20(291)/results.html loader/stateobjects/pushstate-size-iframe.html loader/stateobjects/pushstate-size.html loader/stateobjects/replacestate-size-iframe.html loader/stateobjects/replacestate-size.html
Attachments
Patch (7.39 KB, patch)
2016-11-16 14:11 PST, Alex Christensen
no flags
Ryan Haddad
Comment 1 2016-10-11 16:57:07 PDT
This may be more fallout from https://trac.webkit.org/changeset/207162
Ryan Haddad
Comment 2 2016-10-11 16:59:02 PDT
Yep, seems to have started after the URLParser was enabled.
Ryan Haddad
Comment 3 2016-10-11 17:20:28 PDT
Temporarily skipped these tests on debug with http://trac.webkit.org/projects/webkit/changeset/207180
Alexey Proskuryakov
Comment 4 2016-11-15 11:47:51 PST
Alex, is this something that you are looking into?
Alex Christensen
Comment 5 2016-11-15 12:52:31 PST
Not actively
Radar WebKit Bug Importer
Comment 6 2016-11-15 13:32:31 PST
Alex Christensen
Comment 7 2016-11-16 14:11:05 PST
Alexey Proskuryakov
Comment 8 2016-11-16 14:15:26 PST
Comment on attachment 294974 [details] Patch r=me pending EWS
WebKit Commit Bot
Comment 9 2016-11-16 14:53:53 PST
Comment on attachment 294974 [details] Patch Clearing flags on attachment: 294974 Committed r208815: <http://trac.webkit.org/changeset/208815>
WebKit Commit Bot
Comment 10 2016-11-16 14:53:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.