REGRESSION (r207162): [debug] loader/stateobjects LayoutTests timing out https://bugs.webkit.org/show_bug.cgi?id=163307

Patch by Alex Christensen <achristensen@webkit.org> on 2016-11-16
Reviewed by Alexey Proskuryakov.

Source/WebCore:

* platform/URLParser.cpp:
Removed some unnecessary and redundant assertions in iterators, which are inside inner loops.
(WebCore::URLParser::parsedDataView):
(WebCore::URLParser::parse):
Add a parsedDataView that just returns a UChar instead of a StringView for 1-length views.
This speeds up debug builds considerably, which spent most of the time parsing the path
making and destroying these 1-length StringViews.  It can't hurt release builds.
* platform/URLParser.h:

LayoutTests:

* platform/ios-simulator/TestExpectations:
* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/182527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208815 268f45cc-cd09-0410-ab3c-d52691b4dbfc