Source/WebCore/platform/URLParser.h
@@ -102,6 +102,7 @@ private:
     template<typename CharacterType> void encodeQuery(const Vector<UChar>& source, const TextEncoding&, CodePointIterator<CharacterType>);
     void copyASCIIStringUntil(const String&, size_t length);
     StringView parsedDataView(size_t start, size_t length);
+    UChar parsedDataView(size_t position);
 
     using IPv4Address = uint32_t;
     void serializeIPv4(IPv4Address);
